src/orgs/usa/data-model/objects/Contact/fields/EmployerCompanyName__c.field-meta.xml
<CustomField>
    <fullName>EmployerCompanyName__c</fullName>
    <label>Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>