src/orgs/usa/data-model/objects/Contact/fields/ProviderMedicalDegree__c.field-meta.xml
<CustomField>
    <fullName>ProviderMedicalDegree__c</fullName>
    <label>Medical Degree</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANP</fullName>
            </value>
            <value>
                <fullName>APRN</fullName>
            </value>
            <value>
                <fullName>ARNP</fullName>
            </value>
            <value>
                <fullName>CGC</fullName>
            </value>
            <value>
                <fullName>CNM</fullName>
            </value>
            <value>
                <fullName>CNP</fullName>
            </value>
            <value>
                <fullName>DNP</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>FNP</fullName>
            </value>
            <value>
                <fullName>FNP-C</fullName>
            </value>
            <value>
                <fullName>LICSW</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>NP</fullName>
            </value>
            <value>
                <fullName>NP-C</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PA-C</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
            <value>
                <fullName>RDMS</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>RPA-C</fullName>
            </value>
            <value>
                <fullName>WHNP</fullName>
            </value>
            <value>
                <fullName>WHNP-BC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>