src/orgs/usa/data-model/objects/Contact/fields/ProviderNpi__c.field-meta.xml
<CustomField>
    <fullName>ProviderNpi__c</fullName>
    <label>NPI #</label>
    <length>15</length>
    <type>Text</type>
</CustomField>