src/orgs/usa/data-model/objects/Contact/fields/ProviderSpecialty__c.field-meta.xml
<CustomField>
    <fullName>ProviderSpecialty__c</fullName>
    <label>Specialty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Allergy/immunology</fullName>
            </value>
            <value>
                <fullName>Anesthesiology</fullName>
            </value>
            <value>
                <fullName>Cardiovascular Disease</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Practice</fullName>
            </value>
            <value>
                <fullName>Genetic Counselor</fullName>
            </value>
            <value>
                <fullName>Gynecology/oncology</fullName>
            </value>
            <value>
                <fullName>Hematology/oncology</fullName>
            </value>
            <value>
                <fullName>Infectious Disease</fullName>
            </value>
            <value>
                <fullName>Internal Medicine, General</fullName>
            </value>
            <value>
                <fullName>Maternal And Fetal Medicine</fullName>
            </value>
            <value>
                <fullName>Medical Oncology</fullName>
            </value>
            <value>
                <fullName>Midwife</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Nuclear Medicine</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
            <value>
                <fullName>Obstetrics/gynecology</fullName>
            </value>
            <value>
                <fullName>Ophthalmology</fullName>
            </value>
            <value>
                <fullName>Orthopedic Surgery</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Physician&apos;s Assistant</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Pulmonary Disease</fullName>
            </value>
            <value>
                <fullName>Radiation Oncology</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Reproductive Endocrinologist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>