src/orgs/usa/data-model/objects/Contact/fields/WorkPhone__c.field-meta.xml
<CustomField>
    <fullName>WorkPhone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>