src/orgs/usa/data-model/objects/Contact/recordTypes/Provider.recordType-meta.xml
<RecordType>
    <fullName>Provider</fullName>
    <active>true</active>
    <label>Provider</label>
</RecordType>