src/orgs/usa/data-model/objects/Contact/recordTypes/Staff.recordType-meta.xml
<RecordType>
    <fullName>Staff</fullName>
    <active>true</active>
    <label>Staff</label>
</RecordType>